// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract .extractPackageFile() updates internal packages 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "depName": "@org/a",
      },
      Object {
        "depName": "@org/b",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "foo",
      },
    ],
    "managerData": Object {
      "lernaDir": ".",
      "lernaPackages": Array [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
    "packages": Array [
      "packages/*",
    ],
  },
  Object {
    "deps": Array [
      Object {
        "depName": "@org/b",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "bar",
      },
    ],
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "yarnLock": undefined,
    },
    "packageFile": "packages/a/package.json",
  },
  Object {
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "yarnLock": undefined,
    },
    "packageFile": "packages/b/package.json",
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses lerna package settings 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "depName": "@org/a",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/b",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "foo",
      },
    ],
    "managerData": Object {
      "lernaDir": ".",
      "lernaPackages": Array [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
    "packages": Array [
      "packages/*",
    ],
  },
  Object {
    "deps": Array [
      Object {
        "depName": "@org/b",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "bar",
      },
    ],
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "yarnLock": undefined,
    },
    "packageFile": "packages/a/package.json",
  },
  Object {
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": ".",
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "yarnLock": undefined,
    },
    "packageFile": "packages/b/package.json",
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses yarn workspaces package settings with lerna 1`] = `
Array [
  Object {
    "managerData": Object {
      "lernaClient": "yarn",
      "lernaDir": ".",
      "lernaPackages": Array [
        "oldpackages/*",
      ],
      "yarnWorkspacesPackages": Array [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  Object {
    "managerData": Object {
      "lernaClient": "yarn",
      "lernaDir": ".",
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "yarnLock": undefined,
    },
    "packageFile": "packages/a/package.json",
  },
  Object {
    "managerData": Object {
      "lernaClient": "yarn",
      "lernaDir": ".",
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "yarnLock": undefined,
    },
    "packageFile": "packages/b/package.json",
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses yarn workspaces package settings without lerna 1`] = `
Array [
  Object {
    "managerData": Object {
      "yarnWorkspacesPackages": "packages/*",
    },
    "packageFile": "package.json",
  },
  Object {
    "managerData": Object {
      "hasYarnWorkspaces": true,
      "lernaClient": undefined,
      "lernaDir": undefined,
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "yarnLock": "yarn.lock",
    },
    "packageFile": "packages/a/package.json",
  },
  Object {
    "managerData": Object {
      "lernaClient": undefined,
      "lernaDir": undefined,
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "yarnLock": undefined,
    },
    "packageFile": "packages/b/package.json",
  },
]
`;
